--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ subprojects {
 
     sourceCompatibility = targetCompatibility = compileJava.sourceCompatibility = compileJava.targetCompatibility = '1.7'
 
-    repositories {
+    repositories {]]
         maven {
             url = 'https://maven.minecraftforge.net'
         }
